--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-loader": "^17.0.0",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
