--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10",
     "axios": "^1.0.0-alpha.1",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
